--- a/Localisation/AR.json
+++ b/Localisation/AR.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【تحذير】</color> - حجم تنزيل كبير",
         "ABOUT": "حول",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - تطبيق البنية التحتية والبناء\nNitro4CSR - إدارة الموارد ودمج بيانات المجتمع\nFREYCKSSON - تحديث الموارد\nTheMaintainers - إنشاء وتحديث بيانات المجتمع\n\nالناشر: ムRimgine Entertainment\n\nالبريد الإلكتروني: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "يجب أن تكون جميع السيارات مُطوَّرة للنخبة بالكامل:",
+        "ALL CARS SHOULD BE RESTORED:": "يجب أن يتم ترميم جميع السيارات:",
         "AUDIO": "الصوت",
         "AUTOSHOW": "عرض السيارات",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "وضع <color=#FFD540>PRO</color> لعرض السيارات (معلومات تقنية)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "أفضل نتيجة وسائق. انقر لمشاهدة أفضل فيديو للتحويل!",
         "Boss time: ": "وقت الزعيم: ",
         "CAR INFO (from Vision spreadsheet)": "معلومات السيارة (من جدول الرؤية)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "السيارات في المجموعة: <color=red>{0}</color>",
         "CONFIRM CHANGES": "تأكيد التغييرات",
         "CONNECTION FAILED": "فشل الاتصال",
         "CREATORS": "المطورون",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "شاشة التحميل",
         "Let's choose the unrestored version": "دعنا نختار النسخة غير المرممة",
         "Let's go!": "لنذهب!",
+        "Let's look at ELITES": "لنلقِ نظرة على سيارات النخبة",
         "Let's look at LEGENDS": "دعنا ننظر إلى الأساطير",
         "Let's look at this car": "دعنا ننظر إلى هذه السيارة",
         "MILESTONE SEASON CAR": "سيارة الموسم البارزة",
@@ -69,6 +73,7 @@
         "ON": "تشغيل",
         "OPEN CONFIGURATOR": "فتضبيط الإعدادات",
         "OTHERS": "أخرى",
+        "PRIZE CAR": "سيارة الجائزة"
         "Petrol or electric car": "سيارة بنزين أو كهربائية",
         "Preparing the city...": "جاري تحضير المدينة...",
         "Price of full car upgrades": "سعر ترقيات السيارة الكاملة",
