--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -9,6 +9,8 @@
         "ABOUT": "ÜBER",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktur und App-Entwicklung\nNitro4CSR - Management und Integration von Community Daten\nFREYCKSSON - Resourcen aktualisieren\nTheMaintainers - Erstellung und Instandhaltung von Community Datan\n\nPublisher: ムRimgine Entertainment\n\nKontakt E-Mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "ALLE AUTOS SOLLTEN ELITE-MAXIMIERT SEIN:",
+        "ALL CARS SHOULD BE RESTORED:": "ALLE AUTOS SOLLTEN RESTAURIERT SEIN:",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> Modus  (technische Infos)",
@@ -24,6 +26,7 @@
         "Best result and racer. Click to watch the best shift video!": "Beste Zeit und der Fahrer. Tippe zum aufrufen des Videos mit Schaltanweisungen.",
         "Boss time: ": "Boss Zeit: ",
         "CAR INFO (from Vision spreadsheet)": "AUTO INFO (Project Vision)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS IN SAMMLUNG: <color=red>{0}</color>",
         "CONFIRM CHANGES": "ÄNDERUNGEN SPEICHERN",
         "CONNECTION FAILED": "VERBINDUNG FEHLGESCHLAGEN",
         "CREATORS": "ERSTELLER",
@@ -59,6 +62,7 @@
         "LOADING SCREEN": "LADEBILDSCHIRM",
         "Let's choose the unrestored version": "Lass uns die unrestaurierte Variante auswählen",
         "Let's go!": "Los gehts!",
+        "Let's look at ELITES": "Lass uns auf ELITE schauen",
         "Let's look at LEGENDS": "Lass uns auf LEGENDS schauen",
         "Let's look at this car": "Wie wär's mit diesem Auto",
         "MILESTONE SEASON CAR": "MEILENSTEIN SEASON AUTO",
@@ -71,6 +75,7 @@
         "ON": "AN",
         "OPEN CONFIGURATOR": "KONFIGURATOR ÖFFNEN",
         "OTHERS": "ANDERE",
+        "PRIZE CAR": "PREISAUTO"
         "Petrol or electric car": "Verbrenner- oder Elektro- Auto",
         "Preparing the city...": "Die Stadt vorbereiten...",
         "Price of full car upgrades": "Preis für alle Verbesserungen",
