--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ACERCA",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "TODOS LOS AUTOS DEBEN ESTAR AL MÁXIMO DE ÉLITE:",
+        "ALL CARS SHOULD BE RESTORED:": "TODOS LOS AUTOS DEBEN SER RESTAURADOS:",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "Mejor resultado y mejor piloto. Haz clic para ver el video.!",
         "Boss time: ": "Tiempo del Jefe: ",
         "CAR INFO (from Vision spreadsheet)": "INFORMACION DEL AUTO (vision)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS EN COLECCIÓN: <color=red>{0}</color>",
         "CONFIRM CHANGES": "CONFIRMAR CAMBIOS",
         "CONNECTION FAILED": "CONEXIÓN FALLIDA",
         "CREATORS": "CREADORES",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "PANTALLA DE CARGA",
         "Let's choose the unrestored version": "Elijamos la versión sin restaurar",
         "Let's go!": "¡Vamos!",
+        "Let's look at ELITES": "Veamos los AUTOS ÉLITE",
         "Let's look at LEGENDS": "Veamos LEYENDAS",
         "Let's look at this car": "Veamos este auto.",
         "MILESTONE SEASON CAR": "AUTO DE TEMPORADA",
@@ -69,6 +73,7 @@
         "ON": "Encender",
         "OPEN CONFIGURATOR": "ABRIR",
         "OTHERS": "OTROS",
+        "PRIZE CAR": "AUTO PREMIADO"
         "Petrol or electric car": "Auto de Gasolina o Eléctrico",
         "Preparing the city...": "Preparando la ciudad...",
         "Price of full car upgrades": "Precio de las mejoras completas del auto",
