--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> - 大容量ダウンロード",
         "ABOUT": "概要",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - インフラストラクチャーおよびビルドアプリケーション\nNitro4CSR - リソース管理とコミュニティデータ統合\nFREYCKSSON - リソース更新\nTheMaintainers - コミュニティデータの作成と更新\n\n発行元: ムRimgine Entertainment\n\n連絡先メール: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "全車両をエリート最大限にすべき:",
+        "ALL CARS SHOULD BE RESTORED:": "全車両を修復すべき:",
         "AUDIO": "オーディオ",
         "AUTOSHOW": "オートショー",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "オートショー<color=#FFD540>PRO</color>モード（技術情報）",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "ベスト結果とレーサー。ベストシフト動画を見るにはクリック！",
         "Boss time: ": "ボスタイム：",
         "CAR INFO (from Vision spreadsheet)": "車両情報（ビジョンスプレッドシート）",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "コレクション内の車両: <color=red>{0}</color>",
         "CONFIRM CHANGES": "変更を確定",
         "CONNECTION FAILED": "接続失敗",
         "CREATORS": "クリエイター",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "ローディング画面",
         "Let's choose the unrestored version": "未修復バージョンを選択",
         "Let's go!": "レッツゴー！",
+        "Let's look at ELITES": "エリート車両を見てみよう",
         "Let's look at LEGENDS": "レジェンドを見よう",
         "Let's look at this car": "この車を見てみよう",
         "MILESTONE SEASON CAR": "マイルストーンシーズンカー",
@@ -69,6 +73,7 @@
         "ON": "オン",
         "OPEN CONFIGURATOR": "コンフィギュレーターを開く",
         "OTHERS": "その他",
+        "PRIZE CAR": "賞品車"
         "Petrol or electric car": "ガソリン車または電気自動車",
         "Preparing the city...": "都市を準備中...",
         "Price of full car upgrades": "車両完全アップグレード費用",
