--- a/Localisation/KO.json
+++ b/Localisation/KO.json
@@ -9,6 +9,8 @@
         "ABOUT": "정보",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\nICE_PeAcE CHARGRR\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - 인프라 및 빌드 애플리케이션\nNitro4CSR - 리소스 관리 및 통합 커뮤니티 데이터\nFREYCKSSON - 리소스 업데이트\nTheMaintainers - 커뮤니티 데이터 생성 및 업데이트\nICE_PeAcE CHARGRR\n출판사: ムRimgine Entertainment\n\n이메일 연락처: csr2hub.service@gmail.com",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "모든 차량을 엘리트 최대화해야 합니다:",
+        "ALL CARS SHOULD BE RESTORED:": "모든 차량을 복구해야 합니다:",
         "AUDIO": "오디오",
         "AUTOSHOW": "오토쇼",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "오토쇼 <color=#FFD540>PRO</color> 모드  (기술 정보)",
@@ -24,6 +26,7 @@
         "Best result and racer. Click to watch the best shift video!": "최고 기록과 레이서. 클릭하여 기록 확인하기!",
         "Boss time: ": "보스 시간: ",
         "CAR INFO (from Vision spreadsheet)": "현재 자동차 정보",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "소장 차량: <color=red>{0}</color>",
         "CONFIRM CHANGES": "변경 사항 확인",
         "CONNECTION FAILED": "연결 끊김",
         "CREATORS": "제작자",
@@ -58,6 +61,7 @@
         "LOADING SCREEN": "로딩 화면",
         "Let's choose the unrestored version": "저장되지 않은 버전 선택하기",
         "Let's go!": "출발!",
+        "Let's look at ELITES": "엘리트 차량을 살펴보세요",
         "Let's look at LEGENDS": "레전드 살펴보기",
         "Let's look at this car": "현재 자동차 살펴보기",
         "MILESTONE SEASON CAR": "마일스톤 시즌 자동차",
@@ -70,6 +74,7 @@
         "ON": "켜기",
         "OPEN CONFIGURATOR": "개방형 구성기",
         "OTHERS": "다른 것들",
+        "PRIZE CAR": "상품 자동차"
         "Petrol or electric car": "내연기관 또는 전기 자동차",
         "Preparing the city...": "도시 준비중...",
         "Price of full car upgrades": "자동차 업그레이드이 필요한 총 비용",
