--- a/Localisation/PL.json
+++ b/Localisation/PL.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【OSTRZEŻENIE】</color> - DUŻY ROZMIAR PLIKU DO POBRANIA",
         "ABOUT": "O APLIKACJI",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktura i budowa aplikacji\nNitro4CSR - Zarządzanie zasobami i integracja danych społeczności\nFREYCKSSON - Aktualizacja zasobów\nTheMaintainers - Tworzenie i aktualizacja danych społeczności\n\nWydawca: ムRimgine Entertainment\n\nE-mail kontaktowy: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "WSZYSTKIE SAMOCHODY POWINNY BYĆ W PELNI ULEPSZONE (ELITE):",
+        "ALL CARS SHOULD BE RESTORED:": "WSZYSTKIE SAMOCHODY POWINNY BYĆ ODNOWIONE:",
         "AUDIO": "DŹWIĘK",
         "AUTOSHOW": "SALON SAMOCHODOWY",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "SALON SAMOCHODOWY <color=#FFD540>PRO</color> tryb (informacje techniczne)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "Najlepszy wynik i kierowca. Kliknij, aby obejrzeć wideo z najlepszym przełożeniem!",
         "Boss time: ": "Czas bossa: ",
         "CAR INFO (from Vision spreadsheet)": "INFORMACJE O SAMOCHODZIE (z arkusza Vision)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "SAMOCHODY W KOLEKCJI: <color=red>{0}</color>",
         "CONFIRM CHANGES": "POTWIERDŹ ZMIANY",
         "CONNECTION FAILED": "BRAK POŁĄCZENIA",
         "CREATORS": "TWÓRCY",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "EKRAN ŁADOWANIA",
         "Let's choose the unrestored version": "Wybierzmy nieodrestaurowaną wersję",
         "Let's go!": "Chodźmy!",
+        "Let's look at ELITES": "Spójrzmy na ELITARNYM",
         "Let's look at LEGENDS": "Spójrzmy na LEGENDY",
         "Let's look at this car": "Spójrzmy na ten samochód",
         "MILESTONE SEASON CAR": "SAMOCHÓD SEZONU MILESTONE",
@@ -69,6 +73,7 @@
         "ON": "WŁ.",
         "OPEN CONFIGURATOR": "OTWÓRZ KONFIGURATOR",
         "OTHERS": "INNE",
+        "PRIZE CAR": "SAMOCHOD-NAGRODA"
         "Petrol or electric car": "Samochód benzynowy lub elektryczny",
         "Preparing the city...": "Przygotowywanie miasta...",
         "Price of full car upgrades": "Koszt pełnych ulepszeń samochodu",
