--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -9,6 +9,8 @@
         "ABOUT": "SOBRE",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Aplicativo de infraestrutura e construção\nNitro4CSR - Gerenciamento de recursos e integração de dados da comunidade\nFREYCKSSON - Atualização de recursos\nTheMaintainers - Criação e atualização de dados da comunidade\n\nEditora: ムRimgine Entertainment\n\nE-mail de contato: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "TODOS OS CARROS DEVEM ESTAR NO MÁXIMO ELITE:",
+        "ALL CARS SHOULD BE RESTORED:": "TODOS OS CARROS DEVEM SER RESTAURADOS:",
         "AUDIO": "ÁUDIO",
         "AUTOSHOW": "APRESENTAÇÃO AUTOMÁTICA",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "modo AUTOSHOW <color=#FFD540>PRO</color> (informações técnicas)",
@@ -24,6 +26,7 @@
         "Best result and racer. Click to watch the best shift video!": "Melhor resultado e melhor piloto. Clique para assistir ao melhor vídeo de troca!",
         "Boss time: ": "Hora do chefe: ",
         "CAR INFO (from Vision spreadsheet)": "INFO DO CARRO (visão)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "CARROS NA COLEÇÃO: <color=red>{0}</color>",
         "CONFIRM CHANGES": "CONFIRMAR ALTERAÇÕES",
         "CONNECTION FAILED": "CONEXÃO FALHA",
         "CREATORS": "CRIADORES",
@@ -59,6 +62,7 @@
         "LOADING SCREEN": "TELA DE CARREGAMENTO",
         "Let's choose the unrestored version": "Vamos escolher a versão não restaurada",
         "Let's go!": "Vamos lá!",
+        "Let's look at ELITES": "Vamos ver os ELITES",
         "Let's look at LEGENDS": "Vamos dar uma olhada nas LENDAS",
         "Let's look at this car": "Vamos dar uma olhada neste carro",
         "MILESTONE SEASON CAR": "CARRO MARCANTE DA TEMPORADA",
@@ -71,6 +75,7 @@
         "ON": "LIGADO",
         "OPEN CONFIGURATOR": "ABRIR CONFIGURADOR",
         "OTHERS": "OUTROS",
+        "PRIZE CAR": "CARRO PRÊMIO"
         "Petrol or electric car": "Carro a gasolina ou elétrico",
         "Preparing the city...": "Preparando a cidade...",
         "Price of full car upgrades": "Preço das atualizações completas do carro",
