--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ОСТОРОЖНО】</color> -    ПОТОКОВАЯ ЗАГРУЗКА",
         "ABOUT": "О ПРОЕКТЕ",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment\n\nПо всем вопросам: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "ВСЕ МАШИНЫ ДОЛЖНЫ БЫТЬ ПРОКАЧЕНЫ В ЭЛИТ:",
+        "ALL CARS SHOULD BE RESTORED:": "ВСЕ МАШИНЫ ДОЛЖНЫ БЫТЬ ВОССТАНОВЛЕНЫ:",
         "AUDIO": "АУДИО",
         "AUTOSHOW": "АВТОШОУ",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "Лучший гонщик и результат. Нажми, чтобы посмотреть шифт-видео!",
         "Boss time: ": "Время босса: ",
         "CAR INFO (from Vision spreadsheet)": "ИСТОРИЯ АВТОМОБИЛЯ (vision)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "МАШИН В КОЛЛЕКЦИИ: <color=red>{0}</color>",
         "CONFIRM CHANGES": "ПОДТВЕРДИТЬ ИЗМЕНЕНИЯ",
         "CONNECTION FAILED": "ОШИБКА СОЕДИНЕНИЯ",
         "CREATORS": "СОЗДАТЕЛИ",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "ЗАГРУЗОЧНЫЙ ЭКРАН",
         "Let's choose the unrestored version": "Давай выберем невосстановленный автомобиль",
         "Let's go!": "Погнали!",
+        "Let's look at ELITES": "Давай глянем ELITES",
         "Let's look at LEGENDS": "Давай глянем LEGENDS",
         "Let's look at this car": "Давай посмотрим эту машину",
         "MILESTONE SEASON CAR": "СЕЗОННАЯ МАШИНА",
@@ -69,6 +73,7 @@
         "ON": "ВКЛ",
         "OPEN CONFIGURATOR": "ОТКРЫТЬ КОНФИГУРАТОР",
         "OTHERS": "ДРУГОЕ",
+        "PRIZE CAR": "ПРИЗОВОЙ АВТОМОБИЛЬ",
         "Petrol or electric car": "ДВС или электрокар",
         "Preparing the city...": "Подготовка города...",
         "Price of full car upgrades": "Стоимость полной прокачки автомобиля",
