--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下載量大",
         "ABOUT": "關于",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "所有車輛應達到精英滿級:",
+        "ALL CARS SHOULD BE RESTORED:": "所有車輛應被修復:",
         "AUDIO": "音響",
         "AUTOSHOW": "車展",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "最佳成績與車手。點擊觀看最佳換擋的視頻!",
         "Boss time: ": "領袖時間: ",
         "CAR INFO (from Vision spreadsheet)": "車輛資訊 (自  Vision 資料庫)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "收藏中的車輛: <color=red>{0}</color>",
         "CONFIRM CHANGES": "確認更改",
         "CONNECTION FAILED": "連綫失敗",
         "CREATORS": "創建者",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "加載屏幕",
         "Let's choose the unrestored version": "我們來選擇未修復的版本",
         "Let's go!": "我們出發!",
+        "Let's look at ELITES": "讓我們看看精英車輛",
         "Let's look at LEGENDS": "我們來看看傳奇",
         "Let's look at this car": "我們來看看這輛車",
         "MILESTONE SEASON CAR": "賽季里程碑車輛",
@@ -69,6 +73,7 @@
         "ON": "開啓",
         "OPEN CONFIGURATOR": "開啓配置器",
         "OTHERS": "其他",
+        "PRIZE CAR": "獎品車"
         "Petrol or electric car": "汽油或電動車",
         "Preparing the city...": "正在准備城市中...",
         "Price of full car upgrades": "滿級的價格",
