--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下载量大",
         "ABOUT": "关于",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "所有车辆应达到精英满级:",
+        "ALL CARS SHOULD BE RESTORED:": "所有车辆应被修复:",
         "AUDIO": "音响",
         "AUTOSHOW": "车展",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "车展 <color=#FFD540>PRO</color> 模式  (technical info)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "最佳成绩与车手。点击观看最佳换挡的视频!",
         "Boss time: ": "领袖时间: ",
         "CAR INFO (from Vision spreadsheet)": "车辆资讯 (自 Vision 资料库)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "收藏中的车辆: <color=red>{0}</color>",
         "CONFIRM CHANGES": "确认更改",
         "CONNECTION FAILED": "连线失败",
         "CREATORS": "创建者",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "加载屏幕",
         "Let's choose the unrestored version": "我们来选择未修复的版本",
         "Let's go!": "我们出发!",
+        "Let's look at ELITES": "让我们看看精英车辆",
         "Let's look at LEGENDS": "我们来看看传奇",
         "Let's look at this car": "我们来看看这辆车",
         "MILESTONE SEASON CAR": "赛季里程碑车辆",
@@ -69,6 +73,7 @@
         "ON": "开启",
         "OPEN CONFIGURATOR": "开启配置器",
         "OTHERS": "其他",
+        "PRIZE CAR": "奖品车"
         "Petrol or electric car": "汽油或电动车",
         "Preparing the city...": "正在准备城市中...",
         "Price of full car upgrades": "满级的价格",
