--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<couleur=orange>【ATTENTION】</couleur> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE",
         "ABOUT": "À PROPOS",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastructure et application de construction\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nTheMaintainers - Création et mise à jour des données communautaires\n\nÉditeur : ムRimgine Entertainment\n\nE-mail : csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "TOUTES LES VOITURES DOIVENT ÊTRE AU NIVEAU ÉLITE MAXIMAL:",
+        "ALL CARS SHOULD BE RESTORED:": "TOUTES LES VOITURES DOIVENT ÊTRE RESTAURÉES:",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "SALON DE L'AUTO",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Mode <couleur=#FFD540>PRO</couleur> du SALON DE L'AUTO (informations techniques)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "Meilleur résultat et pilote. Cliquez pour voir la vidéo du meilleur passage !",
         "Boss time: ": "Temps du boss : ",
         "CAR INFO (from Vision spreadsheet)": "INFOS VOITURE (visualisation)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "VOITURES EN COLLECTION: <color=red>{0}</color>",
         "CONFIRM CHANGES": "CONFIRMER LES MODIFICATIONS",
         "CONNECTION FAILED": "ÉCHEC DE CONNEXION",
         "CREATORS": "CRÉATEURS",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "ÉCRAN DE CHARGEMENT",
         "Let's choose the unrestored version": "Choisissons la version non restaurée",
         "Let's go!": "Allons-y !",
+        "Let's look at ELITES": "Regardons les ÉLITES",
         "Let's look at LEGENDS": "Regardons les LÉGENDES",
         "Let's look at this car": "Examinons cette voiture",
         "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
@@ -69,6 +73,7 @@
         "ON": "ACTIVÉ",
         "OPEN CONFIGURATOR": "OUVRIR LE CONFIGURATEUR",
         "OTHERS": "AUTRES",
+        "PRIZE CAR": "VOITURE-RÉCOMPENSE"
         "Petrol or electric car": "Voiture essence ou électrique",
         "Preparing the city...": "Préparation de la ville...",
         "Price of full car upgrades": "Prix des améliorations complètes",
