--- a/Localisation/IT.json
+++ b/Localisation/IT.json
@@ -8,6 +8,8 @@
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ATTENZIONE】</color> - DIMENSIONE DEL DOWNLOAD ELEVATA",
         "ABOUT": "INFORMAZIONI",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruttura e applicazione di costruzione\nNitro4CSR - Gestione risorse e integrazione dati della comunità\nFREYCKSSON - Aggiornamento risorse\nTheMaintainers - Creazione e aggiornamento dati della comunità\n\nEditore: ムRimgine Entertainment\n\nE-mail: csr2hub.service@gmail.com",
+        "ALL CARS SHOULD BE ELITE MAXED:": "TUTTE LE AUTO DEVONO ESSERE POTENZIATE AL MASSIMO (ÉLITE):",
+        "ALL CARS SHOULD BE RESTORED:": "TUTTE LE AUTO DEVONO ESSERE RESTAURATE:",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "SALONE DELL'AUTO",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Modalità <color=#FFD540>PRO</color> del SALONE DELL'AUTO (info tecniche)",
@@ -23,6 +25,7 @@
         "Best result and racer. Click to watch the best shift video!": "Miglior risultato e pilota. Clicca per vedere il video del miglior cambio!",
         "Boss time: ": "Tempo del boss: ",
         "CAR INFO (from Vision spreadsheet)": "INFO AUTO (dalla tabella Vision)",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "AUTO IN COLLEZIONE: <color=red>{0}</color>",
         "CONFIRM CHANGES": "CONFERMA MODIFICHE",
         "CONNECTION FAILED": "CONNESSIONE FALLITA",
         "CREATORS": "CREATORI",
@@ -57,6 +60,7 @@
         "LOADING SCREEN": "SCHERMATA DI CARICAMENTO",
         "Let's choose the unrestored version": "Scegliamo la versione non restaurata",
         "Let's go!": "Andiamo!",
+        "Let's look at ELITES": "Diamo un'occhiata alle ÉLITE",
         "Let's look at LEGENDS": "Diamo un'occhiata alle LEGGENDE",
         "Let's look at this car": "Osserviamo questa auto",
         "MILESTONE SEASON CAR": "AUTO STORICA DELLA STAGIONE",
@@ -69,6 +73,7 @@
         "ON": "ACCESO",
         "OPEN CONFIGURATOR": "APRI CONFIGURATORE",
         "OTHERS": "ALTRO",
+        "PRIZE CAR": "AUTO PREMIO"
         "Petrol or electric car": "Auto a benzina o elettrica",
         "Preparing the city...": "Preparazione della città...",
         "Price of full car upgrades": "Costo degli upgrade completi",
