--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -9,8 +9,8 @@
         "ABOUT": "ÜBER",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
         "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktur und App-Entwicklung\nNitro4CSR - Management und Integration von Community Daten\nFREYCKSSON - Resourcen aktualisieren\nTheMaintainers - Erstellung und Instandhaltung von Community Datan\n\nPublisher: ムRimgine Entertainment\n\nKontakt E-Mail: csr2hub.service@gmail.com",
-        "ALL CARS SHOULD BE ELITE MAXED:": "ALLE AUTOS SOLLTEN ELITE-MAXIMIERT SEIN:",
-        "ALL CARS SHOULD BE RESTORED:": "ALLE AUTOS SOLLTEN RESTAURIERT SEIN:",
+        "ALL CARS SHOULD BE ELITE MAXED:": "ALLE AUTOS MÜSSEN ELITE-MAXIMIERT WERDEN:",
+        "ALL CARS SHOULD BE RESTORED:": "ALLE AUTOS MÜSSEN RESTAURIERT WERDEN:",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> Modus  (technische Infos)",
@@ -26,7 +26,7 @@
         "Best result and racer. Click to watch the best shift video!": "Beste Zeit und der Fahrer. Tippe zum aufrufen des Videos mit Schaltanweisungen.",
         "Boss time: ": "Boss Zeit: ",
         "CAR INFO (from Vision spreadsheet)": "AUTO INFO (Project Vision)",
-        "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS IN SAMMLUNG: <color=red>{0}</color>",
+        "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS IN DER SAMMLUNG: <color=red>{0}</color>",
         "CONFIRM CHANGES": "ÄNDERUNGEN SPEICHERN",
         "CONNECTION FAILED": "VERBINDUNG FEHLGESCHLAGEN",
         "CREATORS": "ERSTELLER",
